# ansys-api-template

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements_precommit.txt
.github/workflows/: ci.yml
hooks/: post_gen_project.py
test/: .gitignore  greeter_input.txt  hello_input.txt  run_test.py  run_test.sh
test/greeter/: greeter.proto
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
