[metadata]
name = ansys-api-{{ cookiecutter.product_name | lower }}
author = ANSYS, Inc.
license = MIT

[options]
python_requires = >=3.7
install_requires =
    grpcio~=1.0
    protobuf~=3.0{% for mod in cookiecutter.proto_dependencies['modules'] %}
    {{ mod }}{% endfor %}
packages = find_namespace:
cmdclass =
    build_py = ansys_tools_protoc_helper.BuildPyCommand
    develop = ansys_tools_protoc_helper.DevelopCommand

[options.packages.find]
include = ansys.*

[options.package_data]
* = *.proto, *.pyi, py.typed

[options.entry_points]
pyansys_protoc_helper.proto_provider =
    ansys.api.{{ cookiecutter.product_name | lower }}.v{{ cookiecutter.api_version }} = ansys.api.{{ cookiecutter.product_name | lower }}.v{{ cookiecutter.api_version }}
